--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "google-closure-library": "^20201102.0.1",
     "node-fetch": "^2.6.1",
     "ws": "^6.1.4",
-    "express": "latest"
+    "express": "latest",
+    "nodemon": "^2.0.9"
   },
   "engines": {
     "node": "10.x"
