--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "node-fetch": "^2.6.1",
     "ws": "^6.1.4",
     "express": "latest",
-    "nodemon": "^2.0.9"
+    "nodemon": "^2.0.9",
+    "account": "^1.0.0"
   },
   "engines": {
     "node": "10.x"
