--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "express": "latest",
     "nodemon": "^2.0.9",
     "account": "^1.0.0",
-    "axois": "^1.0.0"
+    "axios": "^0.21.1"
   },
   "engines": {
     "node": "10.x"
