--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "latest",
     "nodemon": "^2.0.9",
     "account": "^1.0.0",
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "ssh-spawner": "^2.1.1"
   },
   "engines": {
     "node": "10.x"
