--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nodemon": "^2.0.9",
     "account": "^1.0.0",
     "axios": "^0.21.1",
-    "ssh-spawner": "^2.1.1"
+    "ssh-spawner": "^2.1.1",
+    "mongodb": "^4.1.0"
   },
   "engines": {
     "node": "10.x"
