--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "eris": "^0.15.1",
+    "@discordjs/builders": "^1.1.0",
+    "discord.js": "^14.5.0",
     "google-closure-library": "^20201102.0.1",
     "node-fetch": "^2.6.1",
     "ws": "^6.1.4",
@@ -16,7 +18,8 @@
     "axios": "^0.21.1",
     "ssh-spawner": "^2.1.1",
     "mongodb": "^4.1.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": "10.x"
