--- a/package.json
+++ b/package.json
@@ -1,28 +1,41 @@
 {
-  "name": "arras",
-  "version": "1.0.1",
+  "name": "Arras TX",
+  "version": "8.4.5",
+  "description": "Arras TX arras server + client codebase",
   "main": "server.js",
   "scripts": {
     "start": "node server"
   },
+  "author": "Focus#7804",
+  "license": "ISC",
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
-    "eris": "^0.15.1",
     "@discordjs/builders": "^1.1.0",
+    "@keyv/mongo": "^1.1.0",
+    "dblapi.js": "^2.4.1",
     "discord.js": "^14.5.0",
-    "google-closure-library": "^20201102.0.1",
-    "node-fetch": "^2.7.0",
+    "fs": "0.0.1-security",
+    "keyv": "^4.0.1",
+    "moment": "^2.27.0",
+    "mongodb": "^4.10.0",
+    "node-fetch": "^2.6.1",
+    "mongoose": "^6.6.5",
+    "rgb": "^0.1.0",
+    "hex-rgb": "^5.0.0",
+    "eris": "^0.15.1",
+    "google-closure-library": "^20220803.0.0",
     "ws": "^6.1.4",
-    "express": "latest",
     "nodemon": "^2.0.9",
     "account": "^1.0.0",
     "axios": "^0.21.1",
     "ssh-spawner": "^2.1.1",
-    "mongodb": "^4.1.0",
-    "lodash": "^4.17.21",
-    "cors": "^2.8.5"
-  },
-  "engines": {
-    "node": "10.x"
-  },
-  "license": "MIT"
+    "random-country": "^1.0.1",
+    "lol": "^1.0.101-lol",
+    "express": "",
+    "cors": "^2.8.5",
+    "ddos-express": "^0.1.7",
+    "profanity-finder": "^1.0.2"
+  }
 }
